--- a/action.yml
+++ b/action.yml
@@ -1,10 +1,18 @@
-name: 'Your name here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
+name: 'Await checks'
+description: 'Await running checks before continuing'
+author: 'banst'
 inputs:
-  myInput:              # change this
-    description: 'input description here'
-    default: 'default value if applicable'
+  names:
+    description: 'Workflow names to wait'
+    default: ''
+  github_token:
+    description: 'Github token to make api calls'
+  include_queue:
+    description: 'Inlude queued jobs'
+    default: true
+  wait_ms:
+    description: 'Time to wait between call (in ms)'
+    default: 1000
 runs:
   using: 'node12'
   main: 'lib/main.js'
