--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
   "author": "YourNameOrOrganization",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.0.0"
+    "@actions/core": "^1.0.0",
+    "@actions/github": "^1.1.0",
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
     "@types/jest": "^24.0.13",
+    "@types/lodash": "^4.14.144",
     "@types/node": "^12.0.4",
     "jest": "^24.8.0",
     "jest-circus": "^24.7.1",
