--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,9 @@
 name: 'Await checks'
 description: 'Await running checks before continuing'
 author: 'banst'
+branding:
+  icon: 'clock'  
+  color: 'black'
 inputs:
   names:
     description: 'Workflow names to wait'
