--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "lodash": "^4.17.15"
   },
   "devDependencies": {
+    "@types/chance": "^1.0.7",
     "@types/jest": "^24.0.13",
     "@types/lodash": "^4.14.144",
     "@types/node": "^12.0.4",
+    "chance": "^1.1.3",
     "jest": "^24.8.0",
     "jest-circus": "^24.7.1",
     "ts-jest": "^24.0.2",
