--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,11 +4,12 @@ on:
   push:
     branches:
       - master
-      - 'releases/*'
+      - "releases/*"
 
 jobs:
   test:
     runs-on: ubuntu-latest
+    needs: sleep
     steps:
       - uses: actions/checkout@v1
 
